--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "html-to-image": "^1.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
